@@ -1,4 +1,4 @@
-version = "0.9.2"
+version = "0.9.3"
 
 if __name__ == "__main__":
     print version
